add option to use custom secret and id for spotify

--- a/src/gui/tuna.qrc
+++ b/src/gui/tuna.qrc
@@ -8,5 +8,7 @@
         <file>images/icons/play.svg</file>
         <file>images/icons/volup.svg</file>
         <file>images/icons/voldown.svg</file>
+        <file>images/icons/visible.svg</file>
+        <file>images/icons/obs.png</file>
     </qresource>
 </RCC>
