--- a/src/gui/music_control.ui
+++ b/src/gui/music_control.ui
@@ -10,6 +10,10 @@
     <height>158</height>
    </rect>
   </property>
+  <property name="windowIcon">
+   <iconset resource="tuna.qrc">
+    <normaloff>:/images/icons/obs.png</normaloff>:/images/icons/obs.png</iconset>
+  </property>
   <property name="floating">
    <bool>true</bool>
   </property>
