--- a/src/gui/output_edit_dialog.ui
+++ b/src/gui/output_edit_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>525</width>
-    <height>230</height>
+    <height>260</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,6 +18,10 @@
   </property>
   <property name="windowTitle">
    <string>tuna.gui.output.edit.dialog.title</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="tuna.qrc">
+    <normaloff>:/images/icons/obs.png</normaloff>:/images/icons/obs.png</iconset>
   </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
@@ -109,7 +113,9 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="tuna.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
