--- a/src/gui/tuna_gui.ui
+++ b/src/gui/tuna_gui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>683</width>
+    <width>707</width>
     <height>701</height>
    </rect>
   </property>
@@ -24,6 +24,10 @@
   </property>
   <property name="windowTitle">
    <string>tuna.gui.title</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="tuna.qrc">
+    <normaloff>:/images/icons/obs.png</normaloff>:/images/icons/obs.png</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -672,6 +676,111 @@
         </widget>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_21">
+         <item>
+          <widget class="QLabel" name="label_21">
+           <property name="text">
+            <string>tuna.gui.tab.spotify.client_id</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_9">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="txt_client_id">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>320</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="echoMode">
+            <enum>QLineEdit::Password</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_id_show">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="tuna.qrc">
+             <normaloff>:/images/icons/visible.svg</normaloff>:/images/icons/visible.svg</iconset>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_22">
+         <item>
+          <widget class="QLabel" name="label_22">
+           <property name="text">
+            <string>tuna.gui.tab.spotify.client_secret</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_6">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="txt_secret">
+           <property name="minimumSize">
+            <size>
+             <width>320</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="echoMode">
+            <enum>QLineEdit::Password</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_show_secret">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="tuna.qrc">
+             <normaloff>:/images/icons/visible.svg</normaloff>:/images/icons/visible.svg</iconset>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QPushButton" name="btn_open_login">
          <property name="text">
           <string>tuna.gui.tab.spotify.login</string>
@@ -762,8 +871,8 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../../UI/forms/obs.qrc">
-              <normaloff>:/res/images/invisible.svg</normaloff>:/res/images/invisible.svg</iconset>
+             <iconset resource="tuna.qrc">
+              <normaloff>:/images/icons/visible.svg</normaloff>:/images/icons/visible.svg</iconset>
             </property>
            </widget>
           </item>
@@ -854,8 +963,8 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../../UI/forms/obs.qrc">
-              <normaloff>:/res/images/invisible.svg</normaloff>:/res/images/invisible.svg</iconset>
+             <iconset resource="tuna.qrc">
+              <normaloff>:/images/icons/visible.svg</normaloff>:/images/icons/visible.svg</iconset>
             </property>
            </widget>
           </item>
@@ -946,8 +1055,8 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../../UI/forms/obs.qrc">
-              <normaloff>:/res/images/invisible.svg</normaloff>:/res/images/invisible.svg</iconset>
+             <iconset resource="tuna.qrc">
+              <normaloff>:/images/icons/visible.svg</normaloff>:/images/icons/visible.svg</iconset>
             </property>
            </widget>
           </item>
@@ -1491,7 +1600,6 @@
  </widget>
  <resources>
   <include location="tuna.qrc"/>
-  <include location="../../../../UI/forms/obs.qrc"/>
  </resources>
  <connections>
   <connection>
