finished last.fm support credentials are now passed as defines instead of a file switched to c++ threads

--- a/src/gui/widgets/lastfm.ui
+++ b/src/gui/widgets/lastfm.ui
@@ -32,7 +32,17 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="txt_apikey"/>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Powered by &lt;a href=&quot;https://www.last.fm/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#007af4;&quot;&gt;last.fm&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
    </item>
    <item>
     <spacer name="verticalSpacer">
